# tiny-pe-parser

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: main.cpp  pe_parser.cpp  pe_parser.h
